# imag-analyser

./: .env.example  .gitignore  README.md  package-lock.json  package.json  turbo.json
apps/api/: package.json  pyproject.toml  requirements.txt
apps/api/data/feedback/: feedback-2026-05.jsonl  reviews-2026-05.jsonl
apps/api/data/logs/: api.log.2026-05-20  api.log.2026-05-24  api.log.2026-05-25  api.log.2026-05-26  api.log.2026-05-27
apps/api/data/usage/: usage-2026-05.jsonl
apps/api/src/app/: config.py  logging_setup.py  main.py  schemas.py  storage.py
apps/api/src/app/policies/: compliance_rules.json  users.json
apps/api/src/app/prompts/: extraction.md  repair.md  system_base.md
apps/api/src/app/routers/: admin.py  analyze.py  auth.py  chat.py
apps/api/src/app/services/: analyzer.py  auth_service.py  auto_correct.py  chatbot.py  classifier.py  compliance.py  critic.py  doc_intelligence.py  feedback_tracker.py  image_prep.py  input_validator.py  journey_extractor.py  normalize.py  re_reviewer.py  (+4 more)
apps/api/tests/: conftest.py  factories.py  test_arc_number.py  test_auth.py  test_auto_correct.py  test_chat_stream.py  test_classifier.py  test_compliance.py  test_compliance_rules_json.py  test_critic.py  test_critic_decision_endpoint.py  test_delete_review.py  test_image_prep.py  test_input_validator.py  test_journey_extractor.py  test_normalize.py  test_re_review.py  test_re_review_router.py  test_review_decision.py  test_tiling.py  test_token_expiry.py  test_training_data_admin.py  test_usage_tracker.py  test_vision_llm_coerce.py  test_vision_llm_mock.py
(+54 files in other folders)
